Modify github-calendar.css to fix broken layout for github-calendar.js

--- a/css/github-calendar.css
+++ b/css/github-calendar.css
@@ -98,7 +98,7 @@
     text-align: left;
     width: 100%;
     box-sizing: border-box;
-    height: 26px;
+    /*height: 26px;*/
 }
 
 .left.text-muted {
